# cloud_mapper

./: README.md  pyproject.toml
src/cloud_mapper/: __init__.py  cli.py  config.py
src/cloud_mapper/diagram/: edge_builder.py  layout.py  node_mapper.py  renderer.py
src/cloud_mapper/discovery/: base.py  coordinator.py  models.py  session.py
src/cloud_mapper/discovery/collectors/: __init__.py  apigateway.py  cloudfront.py  dynamodb.py  ec2.py  ecs.py  elb.py  iam.py  lambda_.py  rds.py  route53.py  s3.py  sns.py  sqs.py  vpc.py
src/cloud_mapper/utils/: logging.py  retry.py
tests/: conftest.py  test_cli.py
tests/diagram/: test_node_mapper.py  test_renderer.py
tests/discovery/: test_coordinator.py  test_models.py
tests/discovery/collectors/: test_ec2.py  test_s3.py  test_vpc.py
