[project]
name = "cloud-mapper"
version = "0.1.0"
description = "Discover AWS resources and generate architecture diagrams"
requires-python = ">=3.10"
license = {text = "Unlicense"}
dependencies = [
    "boto3>=1.34",
    "click>=8.0",
    "diagrams>=0.23",
    "rich>=13.0",
]

[project.scripts]
cloud-mapper = "cloud_mapper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_mapper"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "moto[all]>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
